Make tweet count consistent with impressions

--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -38,7 +38,7 @@
     <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
       <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Posts (last 7 days)</h5>
       <p class="font-normal text-gray-700 dark:text-gray-400"><%= @tweets_count %></p>
-      <p class="font-normal text-green-600 dark:text-green-400"><%= "+#{@tweets_change_since_last_week} since last week" %></p>
+      <p class="font-normal text-green-600 dark:text-green-400"><%= @tweets_change_since_last_week %></p>
     </div>
   </a>
 
