Make it clear when we dont have followers data

--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -63,7 +63,7 @@
     <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
       <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Followers</h5>
       <p class="font-normal text-gray-700 dark:text-gray-400"><%= @followers_count %></p>
-      <p class="font-normal text-blue-600 dark:text-blue-400"><%= @followers_count_change_percentage_text %>(check with Dean over what time frame this % change should be calculated</p>
+      <p class="font-normal text-blue-600 dark:text-blue-400"><%= @followers_count_change_percentage_text %></p>
     </div>
   </a>
 </div>
