Engagement graph: Retweets

--- a/app/views/public_pages/_engagement_rate.html.erb
+++ b/app/views/public_pages/_engagement_rate.html.erb
@@ -16,7 +16,7 @@
       },
       series: [{
         name: "Engagement Rate",
-        data: [65, 75, 70] // Sample values for likes, retweets, and replies
+        data: [1, <%= @total_retweets %>, 1]
       }],
       xaxis: {
         categories: ['Likes', 'Retweets', 'Replies'],
