Add replies to engagement graph

--- a/app/views/public_pages/_engagement_rate.html.erb
+++ b/app/views/public_pages/_engagement_rate.html.erb
@@ -16,7 +16,7 @@
       },
       series: [{
         name: "Engagement Rate",
-        data: [1, <%= @total_retweets %>, 1]
+        data: [1, <%= @total_retweets %>,<%= @total_replies %>]
       }],
       xaxis: {
         categories: ['Likes', 'Retweets', 'Replies'],
