--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -54,8 +54,8 @@
   <a href="#" class="block w-full md:w-1/2 lg:w-1/4 p-2">
     <div class="p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
       <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Profile Clicks</h5>
-      <p class="font-normal text-gray-700 dark:text-gray-400">7.23K</p>
-      <p class="font-normal text-green-600 dark:text-green-400">142% increase</p>
+      <p class="font-normal text-gray-700 dark:text-gray-400"><%= @profile_clicks %></p>
+      <p class="font-normal text-green-600 dark:text-green-400"><%= @profile_clicks_change_since_last_week %></p>
     </div>
   </a>
   <!-- Followers -->
