--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -1,7 +1,7 @@
 <!-- followers -->
 <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white">Followers</h2>
 <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
-  <% if @daily_data_points_for_graph.count < 2 %>
+  <% if @follower_daily_data_points_for_graph.count < 2 %>
     <p>We are awaiting more data to show the followers graph.</p>
   <% else %>
     <div id="followers-chart"></div>
@@ -10,7 +10,7 @@
 
 <script>
   window.addEventListener("load", function() {
-    <% unless @daily_data_points_for_graph.count < 2 %>
+    <% unless @follower_daily_data_points_for_graph.count < 2 %>
       let options = {
         chart: {
           height: '600px',
@@ -33,10 +33,10 @@
         },
         series: [{
           name: "Followers",
-          data: <%= @daily_data_points_for_graph.map { |point| point[1] } %>
+          data: <%= (@follower_daily_data_points_for_graph.map { |point| point[1] }).to_json.html_safe %>
         }],
         xaxis: {
-          categories: <%= @formatted_labels_for_graph.to_json.html_safe %>,
+          categories: <%= @follower_formatted_labels_for_graph.to_json.html_safe %>,
           type: 'category',
           labels: {
             rotate: -45
