--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -22,7 +22,9 @@
 %>
 
 <div class="px-4 pt-6">
-  <div class="bg-blue-100 border-t border-b border-blue-500 text-blue-700 px-4 py-3" role="alert">
+  <%
+=begin%>
+ <div class="bg-blue-100 border-t border-b border-blue-500 text-blue-700 px-4 py-3" role="alert">
     <p class="font-bold">Connect Your Twitter Account</p>
     <p class="text-sm">To start leveraging the full capabilities of Echosight, please connect your Twitter account.</p>
   </div>
@@ -36,4 +38,6 @@
   </button>
   <% end %>
   </div>
+<%
+=end%>
 </div>
