--- a/app/views/public_pages/_posts.html.erb
+++ b/app/views/public_pages/_posts.html.erb
@@ -52,7 +52,7 @@
                       <%= tweet.impression_count %>
                   </td>
                   <td class="px-6 py-4">
-                      X <!-- Placeholder for Engagement -->
+                      <%= tweet.total_engagement %>
                   </td>
                   <td class="px-6 py-4">
                       <%= tweet.reply_count %>
