Tweak active admin and title

--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "#{@user.handle}'s Public Page" %>
+
 <%= content_for :profile_container do %>
 <div class="profile-container">
   <div class="flex items-center space-x-3">
