--- a/app/views/public_pages/_posts.html.erb
+++ b/app/views/public_pages/_posts.html.erb
@@ -52,7 +52,7 @@
                       <%= tweet.reply_count %>
                   </td>
                  <td class="px-6 py-4 relative flex items-center">
-                  <%= tweet.engagement_rate_percentage %>
+                  <%= tweet.engagement_rate_percentage %>%
                   <div data-tooltip-target="tooltip-engagement-<%= tweet.id %>" class="ml-2">
                     <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
