--- a/app/views/public_pages/_posts.html.erb
+++ b/app/views/public_pages/_posts.html.erb
@@ -51,12 +51,14 @@
                   <td class="px-6 py-4">
                       <%= tweet.reply_count %>
                   </td>
-                 <td class="px-6 py-4 relative flex items-center">
+                 <td class="px-6 py-4 relative">
+                 <div class="engagement-rate-cell">
                   <%= tweet.engagement_rate_percentage %>%
                   <div data-tooltip-target="tooltip-engagement-<%= tweet.id %>" class="ml-2">
                     <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
+                  </div>
                   </div>
                   <div id="tooltip-engagement-<%= tweet.id %>" role="tooltip" class="tooltip absolute z-10 invisible bg-gray-900 text-white p-2 rounded-lg shadow-lg text-xs">
                     Engagement rate is calculated as (interactions / impressions) * 100. For this tweet:
