--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,10 +3,14 @@
         &copy; 2023<% if Time.now.year > 2023 %> - <%= Time.now.year %><% end %> <a href="<%= root_url %>" class="hover:underline" target="_blank">Echosight.io</a>. All rights reserved.
 
     </p>
-    <ul class="flex flex-wrap items-center justify-center">
+    <%
+=begin%>
+ <ul class="flex flex-wrap items-center justify-center">
         <li><a href="#" class="mr-4 text-sm font-normal text-gray-500 hover:underline md:mr-6 dark:text-gray-400">Terms</a></li>
         <li><a href="#" class="mr-4 text-sm font-normal text-gray-500 hover:underline md:mr-6 dark:text-gray-400">Licensing</a></li>
         <li><a href="#" class="mr-4 text-sm font-normal text-gray-500 hover:underline md:mr-6 dark:text-gray-400">Cookie Policy</a></li>
         <li><a href="#" class="text-sm font-normal text-gray-500 hover:underline dark:text-gray-400">Contact</a></li>
     </ul>
+<%
+=end%>
 </footer>
