add Dark Mode toggle button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
       Visit the guide for more information: https://vite-ruby.netlify.app/guide/rails
     -->
-
+    <%= render 'layouts/dark_mode_toggle' %>
   </head>
 
   <body>
