--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,7 +18,7 @@
           <%= f.label :password, "Password <i>(leave blank if you don't want to change it)</i>".html_safe, class: 'block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300' %>
           <%= f.password_field :password, autocomplete: "new-password", class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white' %>
           <% if @minimum_password_length %>
-            <div class="text-sm text-gray-500"><%= @minimum_password_length %> characters minimum</div>
+            <em class="text-sm text-gray-500 dark:text-white">(<%= @minimum_password_length %> characters minimum)</em>
           <% end %>
         </div>
 
