--- a/app/views/layouts/authenticated.html.erb
+++ b/app/views/layouts/authenticated.html.erb
@@ -22,7 +22,7 @@
   </head>
   <%= render 'layouts/dark_mode_toggle' %>
 
-  <body>
+  <body class="dark:bg-gray-900">
   <%= render 'layouts/nav_bar' %>
   <div class="flex pt-16 overflow-hidden bg-gray-50 dark:bg-gray-900">
 
