--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -11,7 +11,7 @@
             <div>
                 <%= f.label :password, "New password" %><br />
                 <% if @minimum_password_length %>
-                    <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+                    <em class="text-sm text-gray-500 dark:text-white">(<%= @minimum_password_length %> characters minimum)</em>
                 <% end %>
                 <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
             </div>
