--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
           <div>
             <%= f.label :password %>
             <% if @minimum_password_length %>
-              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <em class="text-sm text-gray-500 dark:text-white">(<%= @minimum_password_length %> characters minimum)</em>
             <% end %>
             <%= f.password_field :password, autocomplete: "new-password" %>
           </div>
