--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -9,7 +9,7 @@
 </div>
 <% end %>
 
-<div class="relative bg-white">
+<div class="relative">
   <!-- Header Photo -->
   <img class="h-48 w-full object-cover shadow-lg" src="<%= @user.banner_url || image_url('demo/loftwah-banner-image.png') %>" alt="Twitter Header Photo">
 
@@ -22,14 +22,14 @@
 
       <!-- Profile Info -->
       <div>
-        <h1 class="text-2xl font-bold text-gray-900"><%= @user.name %></h1>
-        <p class="text-sm text-gray-500"><%= @user.handle %></p>
+        <h1 class="text-2xl font-bold text-gray-900 dark:text-white"><%= @user.name %></h1>
+        <p class="text-sm text-gray-500 dark:text-white"><%= @user.handle %></p>
       </div>
     </div>
 
     <!-- Quote Container -->
     <div class="py-2 px-4 rounded-lg">
-      <p class="text-xl font-semibold italic text-gray-900">"Any sufficiently advanced technology is equivalent to magic." - Arthur C. Clarke</p>
+      <p class="text-xl font-semibold italic text-gray-900 dark:text-white">"Any sufficiently advanced technology is equivalent to magic." - Arthur C. Clarke</p>
     </div>
   </div>
 </div>
@@ -78,7 +78,7 @@
 <%= render "public_pages/profile_conversion_rate" %>
 <%= render "public_pages/posts" %>
 
-<section class="bg-gray-100 text-gray-800 py-8 px-4 sm:px-6 lg:px-8 rounded-xl w-full">
+<section class="mt-2 bg-gray-100 dark:bg-gray-800 text-gray-800 dark:text-gray-200 py-8 px-4 sm:px-6 lg:px-8 rounded-xl w-full">
   <div class="w-full mx-auto text-center">
     <h2 class="text-3xl font-extrabold sm:text-4xl">
       Want to Stand Out?
@@ -88,7 +88,7 @@
     </p>
     <div class="mt-8 flex justify-center">
       <div class="inline-flex rounded-md shadow">
-        <a href="<%=new_registration_path(:user) %>" class="call-to-action-button call-to-action-button-indigo">
+        <a href="<%= new_registration_path(:user) %>" class="call-to-action-button call-to-action-button-indigo">
           Join Echosight Now
         </a>
       </div>
