Only show top 28 days of top tweets

--- a/app/views/public_pages/_posts.html.erb
+++ b/app/views/public_pages/_posts.html.erb
@@ -1,4 +1,10 @@
-<h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white">Top Posts</h2>
+<div data-tooltip-target="tooltip-default" class="inline-block">
+    <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white">Top Posts</h2>
+</div>
+<div id="tooltip-default" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+    Last 28 days
+    <div class="tooltip-arrow" data-popper-arrow></div>
+</div>
 
 <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
     <table class="w-full text-sm text-center text-gray-500 dark:text-gray-400">
