--- a/app/views/public_pages/_engagement_rate.html.erb
+++ b/app/views/public_pages/_engagement_rate.html.erb
@@ -1,5 +1,5 @@
 <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white">Engagement Rate</h2>
-<div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
+<div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
   <div id="engagement-chart"></div>
 </div>
 
