--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -1,6 +1,6 @@
 <!-- followers -->
 <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white">Followers</h2>
-<div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
+<div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
   <% if @follower_daily_data_points_for_graph.count < 2 %>
     <p>We are awaiting more data to show the followers graph.</p>
   <% else %>
