--- a/app/views/public_pages/_profile_conversion_rate.html.erb
+++ b/app/views/public_pages/_profile_conversion_rate.html.erb
@@ -1,5 +1,19 @@
-<h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white">Profile Conversion Rate</h2>
-
+<div class="inline-block">
+  <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center">
+    Profile Conversion Rate
+    <span class="ml-1">
+      <div data-tooltip-target="profile-conversion-rate-tooltip">
+        <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+      </div>
+    </span>
+  </h2>
+</div>
+<div id="profile-conversion-rate-tooltip" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+    Last 28 days
+    <div class="tooltip-arrow" data-popper-arrow></div>
+</div>
 <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
   <div id="conversion-rate-chart"></div>
 </div>
