--- a/app/views/public_pages/_impressions_over_time.html.erb
+++ b/app/views/public_pages/_impressions_over_time.html.erb
@@ -1,6 +1,6 @@
 <div class="inline-block">
   <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center">
-    Impressions Over Time
+    Impressions
     <span class="ml-1">
       <div data-tooltip-target="impressions-over-time-tooltip">
         <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -11,7 +11,7 @@
   </h2>
 </div>
 <div id="impressions-over-time-tooltip" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
-    We collect new impression data each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available.
+    We collect new impression data each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available. We will show up to 28 days of data.
     <div class="tooltip-arrow" data-popper-arrow></div>
 </div>
 
