Attempt to show posts diff with less data than 7 days

--- a/app/views/public_pages/show.html.erb
+++ b/app/views/public_pages/show.html.erb
@@ -49,8 +49,8 @@
           </div>
         </span>
       </h5>
-      <p class="font-normal text-gray-700 dark:text-gray-400"><%= @this_weeks_tweets_count %></p>
-      <p class="font-normal text-green-600 dark:text-green-400"><%= @tweets_change_since_last_week %></p>
+      <p class="font-normal text-gray-700 dark:text-gray-400"><%= @tweet_count_over_available_time_period %></p>
+      <p class="font-normal text-green-600 dark:text-green-400"><%= @tweets_change_over_available_time_period %></p>
     </div>
   </div>
   <!-- Impressions -->
