--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -79,9 +79,10 @@
             }
           }
         },
-  stroke: {
-    width: 6,
-  },
+        stroke: {
+          width: 6,
+          curve: 'smooth'
+        },
         grid: {
           show: true,
           strokeDashArray: 4,
