--- a/app/views/public_pages/_profile_conversion_rate.html.erb
+++ b/app/views/public_pages/_profile_conversion_rate.html.erb
@@ -108,12 +108,13 @@
           }
         }
       },
+      stroke: {
+        width: 6,
+        curve: 'smooth'
+      },
       grid: {
         show: true,
         strokeDashArray: 4,
-      },
-      stroke: {
-        curve: 'smooth'
       },
       markers: {
         size: 4,
